// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/List List 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
  width: 650px;
}

.emotion-3 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 0.25rem;
  width: 40.625rem;
  height: 40.625rem;
  overflow: auto;
  overflow-x: hidden;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        data-testid="ictinus_list"
      >
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
        <span
          data-focus-scope-start={true}
          hidden={true}
        />
        <div
          aria-label="ictinus_list"
          className="emotion-3"
          data-empty={true}
          data-layout="stack"
          data-orientation="vertical"
          id="listshowcase"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        />
        <span
          data-focus-scope-end={true}
          hidden={true}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/List List with icons 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
  width: 650px;
}

.emotion-3 {
  overflow-x: hidden;
}

.emotion-4 {
  position: absolute;
  left: 0;
  top: 0;
  height: 56px;
  width: 100%;
}

.emotion-5 {
  position: absolute;
  left: 0;
  top: 56px;
  height: 56px;
  width: 100%;
}

.emotion-6 {
  position: absolute;
  left: 0;
  top: 112px;
  height: 56px;
  width: 100%;
}

.emotion-7 {
  position: absolute;
  left: 0;
  top: 168px;
  height: 56px;
  width: 100%;
}

.emotion-8 {
  position: absolute;
  left: 0;
  top: 224px;
  height: 56px;
  width: 100%;
}

.emotion-9 {
  position: absolute;
  left: 0;
  top: 280px;
  height: 56px;
  width: 100%;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
        onScroll={[Function]}
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "direction": "ltr",
            "height": 277,
            "overflow": "auto",
            "position": "relative",
            "width": 650,
            "willChange": "transform",
          }
        }
      >
        <div
          style={
            Object {
              "height": 336,
              "pointerEvents": undefined,
              "width": "100%",
            }
          }
        >
          <span
            className="emotion-4"
          >
            <item />
          </span>
          <span
            className="emotion-5"
          >
            <item />
          </span>
          <span
            className="emotion-6"
          >
            <item />
          </span>
          <span
            className="emotion-7"
          >
            <item />
          </span>
          <span
            className="emotion-8"
          >
            <item />
          </span>
          <span
            className="emotion-9"
          >
            <item />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/List Virtualized List 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
  width: 650px;
}

.emotion-3 {
  overflow-x: hidden;
}

.emotion-4 {
  position: absolute;
  left: 0;
  top: 0;
  height: 56px;
  width: 100%;
}

.emotion-5 {
  position: absolute;
  left: 0;
  top: 56px;
  height: 56px;
  width: 100%;
}

.emotion-6 {
  position: absolute;
  left: 0;
  top: 112px;
  height: 56px;
  width: 100%;
}

.emotion-7 {
  position: absolute;
  left: 0;
  top: 168px;
  height: 56px;
  width: 100%;
}

.emotion-8 {
  position: absolute;
  left: 0;
  top: 224px;
  height: 56px;
  width: 100%;
}

.emotion-9 {
  position: absolute;
  left: 0;
  top: 280px;
  height: 56px;
  width: 100%;
}

.emotion-10 {
  position: absolute;
  left: 0;
  top: 336px;
  height: 56px;
  width: 100%;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
        onScroll={[Function]}
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "direction": "ltr",
            "height": 277,
            "overflow": "auto",
            "position": "relative",
            "width": 650,
            "willChange": "transform",
          }
        }
      >
        <div
          style={
            Object {
              "height": 325092,
              "pointerEvents": undefined,
              "width": "100%",
            }
          }
        >
          <span
            className="emotion-4"
          >
            <item />
          </span>
          <span
            className="emotion-5"
          >
            <item />
          </span>
          <span
            className="emotion-6"
          >
            <item />
          </span>
          <span
            className="emotion-7"
          >
            <item />
          </span>
          <span
            className="emotion-8"
          >
            <item />
          </span>
          <span
            className="emotion-9"
          >
            <item />
          </span>
          <span
            className="emotion-10"
          >
            <item />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
